--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -28,7 +28,8 @@ header {
   padding: 30px 0;
 }
 header .container {
-  max-width: 1200px;
+  width: 1200px;
+  max-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -63,6 +64,8 @@ header .container .nav-bar nav ul li a {
   display: block;
   padding: 15px;
   text-decoration: none;
+  font-weight: 400;
+  font-size: 15px;
   color: white;
   transition: 0.5s;
 }
@@ -343,7 +346,8 @@ header .container .search-cart-login .cart .cart-drop .cart-bottom .buttons butt
 }
 .scroll-header .container {
   justify-content: center;
-  max-width: 1200px;
+  width: 1200px;
+  max-width: 100%;
   padding: 0 15px;
   margin: 0 30px;
 }
