--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -25,7 +25,8 @@ header{
     justify-content: center;
     padding: 30px 0;
     .container{
-        max-width: 1200px;
+        width: 1200px;
+        max-width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -55,6 +56,8 @@ header{
                             display: block;
                             padding:15px;
                             text-decoration: none;
+                            font-weight: 400;
+                            font-size: 15px;
                             color: white;
                             transition: 0.5s;
                             &:hover{
@@ -351,7 +354,8 @@ header{
     transition: 0.5s;
     .container{
         justify-content: center;
-        max-width: 1200px;
+        width: 1200px;
+        max-width: 100%;
         padding: 0 15px;
         margin: 0 30px;
         .logo{
