--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -6,16 +6,50 @@
   font-family: "Poppins", sans-serif;
 }
 
-.on-cart {
-  height: auto;
-  position: absolute;
+div#mini-head {
+  position: fixed;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: black;
-  opacity: 0.5;
-  z-index: 2;
+  width: 100%;
+  z-index: 1;
+  justify-content: center;
+  background-color: white;
+}
+div#mini-head .container .row {
+  padding: 10px 0;
+  justify-content: space-between;
+}
+div#mini-head .container .row .burger-search {
+  display: flex;
+  justify-content: flex-start;
+}
+div#mini-head .container .row .burger-search .nav-icon {
+  width: 40px;
+  height: 40px;
+}
+div#mini-head .container .row .burger-search .search {
+  width: 40px;
+  height: 40px;
+}
+div#mini-head .container .row .logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+div#mini-head .container .row .logo img {
+  width: 156px;
+  height: 27px;
+}
+div#mini-head .container .row .login-cart {
+  display: flex;
+  justify-content: flex-end;
+}
+div#mini-head .container .row .login-cart .login {
+  width: 40px;
+  height: 40px;
+}
+div#mini-head .container .row .login-cart .cart {
+  width: 40px;
+  height: 40px;
 }
 
 header {
