--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -5,17 +5,57 @@
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
 }
-.on-cart{
-    height: auto;
-    position: absolute;
+
+//header-mini
+div#mini-head{
+    position: fixed;
     top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: black;
-    opacity: 0.5;
-    z-index: 2;
+    width: 100%;
+    z-index: 1;
+    justify-content: center;
+    background-color: white;
+    .container{
+        .row{
+            padding: 10px 0;
+            justify-content: space-between;
+            .burger-search{
+                display: flex;
+                justify-content: flex-start;
+                .nav-icon{
+                    width: 40px;
+                    height: 40px;
+                }
+                .search{
+                    width: 40px;
+                    height: 40px;
+                }
+            }
+            .logo{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                img{
+                    width: 156px;
+                    height: 27px;
+                }
+            }
+            .login-cart{
+                display: flex;
+                justify-content: flex-end;
+                .login{
+                    width: 40px;
+                    height: 40px;
+                }
+                .cart{
+                    width: 40px;
+                    height: 40px;
+                }
+            }
+        }
+    }
 }
+
+//header-large
 header{
     position: absolute;
     top: 0;
@@ -337,10 +377,6 @@ header{
     }
 }
 
-
-
-
-
 .scroll-header{
     position: sticky;
     background-color: white;
@@ -570,3 +606,4 @@ header{
         }
     }
 }
+
