--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -8,7 +8,7 @@
 
 //header-mini
 div#mini-head{
-    position: fixed;
+    position: sticky;
     top: 0;
     width: 100%;
     z-index: 1;
@@ -31,12 +31,14 @@ div#mini-head{
                 }
             }
             .logo{
+                width: 156px;
+                height: 27px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 img{
-                    width: 156px;
-                    height: 27px;
+                    width: 100%;
+                    height:100%;
                 }
             }
             .login-cart{
@@ -49,6 +51,55 @@ div#mini-head{
                 .cart{
                     width: 40px;
                     height: 40px;
+                }
+            }
+        }
+    }
+    @media screen and(min-width:821) and (max-width:1181) {
+        position: sticky;
+        top: 0;
+        width: 100%;
+        z-index: 1;
+        justify-content: center;
+        background-color: rgb(255, 0, 0);
+        .container{
+            .row{
+                padding: 10px 0;
+                justify-content: space-between;
+                .burger-search{
+                    display: flex;
+                    justify-content: flex-start;
+                    .nav-icon{
+                        width: 40px;
+                        height: 40px;
+                    }
+                    .search{
+                        width: 40px;
+                        height: 40px;
+                    }
+                }
+                .logo{
+                    width: 200px!important;
+                    height: 35px!important;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    img{
+                        width: 100%!important;
+                        height:100%!important;
+                    }
+                }
+                .login-cart{
+                    display: flex;
+                    justify-content: flex-end;
+                    .login{
+                        width: 40px;
+                        height: 40px;
+                    }
+                    .cart{
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
             }
         }
@@ -278,13 +329,18 @@ header{
                     top: 2px;
                     right: 2px;
                 }
+                .cart-drop.active{
+                    width: 400px;
+                }
                 .cart-drop{
+                    height: 100vh;
+                    overflow: hidden;
                     animation-duration: 0.5s;
-                    position: fixed;
+                    position: absolute;
                     top: 0;
                     right: 0;
                     bottom: 0;
-                    width: 400px;
+                    width: 0px;
                     background-color: white;
                     border: 1px solid #e9e9e9;
                     padding: 0 10px;
