--- a/assets/scss/homeStyle.scss
+++ b/assets/scss/homeStyle.scss
@@ -84,52 +84,89 @@ section#slider{
                 }
             }
         }
-        
-        @media screen and (min-width:391px) and (max-width:821px) {
-            .title{
-                text-align: left;
-                width: 40%;
-                height: max-content;
-                position: absolute;
-                right: 20px;
-                top: 150px;
-                h4{
-                    color: #eb4d4b;
-                    font-size: 28px;
-                    line-height: 30px;
-                    margin-bottom: 20px;
-                    letter-spacing: 0.8px;
-                    font-weight: 400;
+    }
+    
+    @media screen and (min-width:391px) and (max-width:821px) {
+        .slide{
+            .item{
+                color: white;
+                position: relative;
+                .second.title{
+                    left: 50px;
                 }
-                h1{
-                    font-size: 62px;
-                    line-height: 70px;
-                    font-weight: 600;
+                .title{
+                    text-align: left;
+                    height: max-content;
+                    position: absolute;
+                    right: 20px;
+                    top: 50px!important;
+                    h4{
+                        font-size: 20px!important;
+                        line-height: 22px!important;
+                        margin-bottom: 10px!important;
+                    }
+                    h1{
+                        font-size: 38px!important;
+                        line-height: 44px!important;
+                        margin-bottom: 15px!important;
+                    }
+                    p{
+                        font-size: 14px!important;
+                        margin-bottom: 15px!important;
+                    }
+                    button{
+                        background-color: #eb4d4b;
+                        height: 40px;
+                        padding: 8px 30px;
+                        border: none;
+                        border-radius: 30px;
+                        font-size: 14px;
+                        color: white;
+                        transition: 0.5s;
+                        &:hover{
+                            background-color: #232323;
+                        }
+                    }
                 }
-                p{
-                    width: 95%;
-                    margin-bottom: 50px;
-                }
-                button{
-                    background-color: #eb4d4b;
-                    height: 40px;
-                    padding: 8px 30px;
-                    border: none;
-                    border-radius: 30px;
-                    font-size: 14px;
-                    color: white;
-                    transition: 0.5s;
-                    &:hover{
-                        background-color: #232323;
+                
+            }
+            .owl-theme{
+                .owl-dots{
+                    position: absolute;
+                    left: 45%;
+                    right: 45%;
+                    bottom: 0;
+                    .owl-dot{
+                        button{
+                            border-radius: 0px;
+                        }
+                        span{
+                            bottom: 30px;
+                            left: 0;
+                            width: 12px;
+                            height: 12px;
+                            background: #D6D6D6;
+                            display: block;
+                            transition: 0.5s;
+                            border-radius: 0px;
+                            background-color: #eb4d4b;
+                            &:nth-child(1){
+                                margin-right: 2.5px;
+                            }
+                            &:nth-child(2){
+                                margin-left: 2.5px;
+                            }
+                        }
                     }
                 }
             }
         }
-        @media screen and (max-width:391px) {
-            
-        }
+    }
+    @media screen and (max-width:391px) {
+        
     }
 }
+
 // services
 section#services{
     background-color: #fbfbfb;
@@ -175,12 +212,58 @@ section#services{
             }
         }
     }
-}
-@keyframes mymove {
-    25% {transform: rotateY(90deg);}
-    50% {transform: rotateY(180deg);}
-    75% {transform: rotateY(270deg);}
-    100% {transform: rotateY(360deg);}
+    @media screen and (min-width:391px) and (max-width:821px) {
+        background-color: #fbfbfb;
+        margin-bottom: 50px;
+        .container{
+            width: 1200px;
+            max-width: 85%;
+        }
+        .row{
+            padding: 70px 0;
+            align-items: center;
+            .service {
+                text-align: center;
+                padding: 0 20px;
+                a{
+                    text-decoration: none;
+                    color: black;
+                    .service-image{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        img{
+                            width: 55px;
+                            height: 55px;
+                        }
+                        .service-rotate{
+                            animation: mymove 0.4s;
+                        }
+                        margin-bottom: 10px;
+                    } 
+                    .describtion{
+                        span{
+                            font-size: 18px;
+                            font-weight: 500;
+                        }
+                        p{
+                            font-size: 14px;
+                            color: gray;
+                            letter-spacing: 1px;
+                            line-height: 25px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @keyframes mymove {
+        25% {transform: rotateY(90deg);}
+        50% {transform: rotateY(180deg);}
+        75% {transform: rotateY(270deg);}
+        100% {transform: rotateY(360deg);}
+    }
 }
 
 // products
@@ -190,9 +273,6 @@ section#products{
         width: 1200px;
         max-width: 100%;
         .image{
-            background-color: #eb4d4b;
-            width: 360px;
-            height: 215px;
             img{
                 width: 100%;
                 height: 100%;
@@ -258,6 +338,86 @@ section#products{
                 transition: 0.5s;
                 &:hover{
                     background-color: #232323;
+                }
+            }
+        }
+    }
+    @media screen and (min-width:391px) and (max-width:1181px) {
+        margin-bottom: 50px;
+        .container{
+            width: 1200px;
+            max-width: 85%;
+            .image{
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            .about{
+                text-align: center;
+                .title{
+                    padding-bottom: 25px;
+                    margin-bottom: 25px;
+                    h5{
+                        text-transform: uppercase;
+                        color: #eb4d4b;
+                        font-size: 16px;
+                        letter-spacing: 8px;
+                        font-weight: 500;
+                        margin: 0;
+                        margin-bottom: 12px;
+                    }
+                    h1{
+                        font-size: 40px;
+                        font-weight: 600;
+                        position: relative;
+                        &::after{
+                            border-top: 4px solid #eb4d4b;
+                            bottom: -20px;
+                            content: "";
+                            position: absolute;
+                            left: 42%;
+                            right: 42%;
+                            width: 16%;
+                        }
+                    }
+                }
+                p{
+                    font-size: 13px;
+                    color: gray;
+                    letter-spacing: 1px;
+                }
+                .about-list{
+                    justify-content: center;
+                    margin-bottom: 20px;
+                    ul{
+                        text-align: left;
+                        li{
+                            color: rgb(110, 110, 110);
+                            font-size: 15px;
+                            line-height: 30px;
+                        }
+                        li::marker{
+                            font-size: 20px;
+                            color: #eb4d4b;
+                        }
+                        &:nth-child(2){
+                            margin-left: 30px;
+                        }
+                    }
+                }
+                button{
+                    background-color: #eb4d4b;
+                    height: 45px;
+                    padding: 8px 30px;
+                    border: none;
+                    border-radius: 30px;
+                    font-size: 14px;
+                    color: white;
+                    transition: 0.5s;
+                    &:hover{
+                        background-color: #232323;
+                    }
                 }
             }
         }
