--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -215,7 +215,31 @@ footer .footer-bottom .pay-cards {
 footer .footer-bottom .pay-cards img {
   margin-left: 10px;
 }
+@media screen and (min-width: 391px) and (max-width: 820px) {
+  footer .footer-bottom span {
+    text-align: center;
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    padding: 0;
+    margin-bottom: 10px;
+  }
+  footer .footer-bottom span a {
+    text-decoration: none;
+    color: white;
+  }
+  footer .footer-bottom .pay-cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  footer .footer-bottom .pay-cards img {
+    margin-left: 10px;
+  }
+}
 footer .go-top {
+  opacity: 0;
   z-index: 1;
   display: flex;
   align-items: center;
@@ -233,4 +257,16 @@ footer .go-top {
 }
 footer .go-top:hover {
   background-color: #232323;
+}
+@media screen and (min-width: 391px) and (max-width: 821px) {
+  footer .go-top {
+    right: 40px;
+    bottom: 40px;
+    width: 100px;
+    height: 100px;
+  }
+}
+footer .show {
+  opacity: 1;
+  visibility: visible;
 }/*# sourceMappingURL=footer.css.map */
