--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -210,8 +210,35 @@ footer{
                 margin-left: 10px;
             }
         }
+
+    }
+    @media screen and (min-width:391px) and (max-width:820px) {
+      .footer-bottom{
+        span{
+            text-align: center;
+            color: white;
+            font-size: 14px;
+            font-weight: 400;
+            letter-spacing: 0.5px;
+            padding: 0;
+            margin-bottom: 10px;
+            a{
+                text-decoration: none;
+                color: white;
+            }
+        }
+        .pay-cards{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img{
+                margin-left: 10px;
+            }
+        }
+      }
     }
     .go-top{
+        opacity: 0;
         z-index: 1;
         display: flex;
         align-items: center;
@@ -229,5 +256,17 @@ footer{
         &:hover{
             background-color: #232323;
         }
+    }
+    @media screen and (min-width:391px) and (max-width:821px) {
+        .go-top{
+            right: 40px;
+            bottom: 40px;
+            width: 100px;
+            height: 100px;
+        }
+    }
+    .show {
+        opacity: 1;
+        visibility: visible;
     }
 }
