--- a/assets/scss/homeStyle.scss
+++ b/assets/scss/homeStyle.scss
@@ -348,14 +348,16 @@ section#products{
             width: 1200px;
             max-width: 85%;
             .image{
+                margin-bottom: 30px;
                 img{
                     width: 100%;
                     height: 100%;
                 }
             }
             .about{
-                text-align: center;
+                text-align: center!important;
                 .title{
+                    text-align: center!important;
                     padding-bottom: 25px;
                     margin-bottom: 25px;
                     h5{
@@ -488,42 +490,46 @@ section#customers{
                 overflow: hidden;
             }
         }
-        .customer{
-            background-color: white;
-            width: 100%;
-            padding: 65px 50px 40px;
-            .avatar{
-                position: absolute;
-                top: -60px;
-                left: 50px;
-                width: 100px;
-                height: 100px;
-                border: solid 5px  rgb(235, 77, 75);
-                border-radius: 50%;
-                overflow: hidden;
-                img{
-                    object-fit: contain;
+        .item{
+            // height: max-content;
+            // background-color: white;
+            .customer{
+                background-color: white;
+                padding: 0px 50px 40px;
+                margin: 50px 0 0;
+                .avatar{
+                    position: relative;
+                    top: -50px;
+                    left: 10px;
+                    width: 100px;
+                    height: 100px;
+                    border: solid 5px  rgb(235, 77, 75);
+                    border-radius: 50%;
+                    overflow: hidden;
+                    img{
+                        object-fit: contain;
+                    }
                 }
-            }
-            .about{
-                p{
-                    font-size: 14px;
-                    color: rgb(100, 100, 100);
-                    line-height: 25px;
-                    letter-spacing: 0.5px;
-                }
-            }
-            .name-prof{
-                span{
-                    font-size: 24px;
-                    font-weight: 500;
-                    color: #232323;
-                    &:nth-child(2){
-                        margin-left: 8px;
+                .about{
+                    p{
                         font-size: 14px;
-                        color: #eb4d4b;
-                        letter-spacing: 1px;
-                        font-weight: 400;
+                        color: rgb(100, 100, 100);
+                        line-height: 25px;
+                        letter-spacing: 0.5px;
+                    }
+                }
+                .name-prof{
+                    span{
+                        font-size: 24px;
+                        font-weight: 500;
+                        color: #232323;
+                        &:nth-child(2){
+                            margin-left: 8px;
+                            font-size: 14px;
+                            color: #eb4d4b;
+                            letter-spacing: 1px;
+                            font-weight: 400;
+                        }
                     }
                 }
             }
@@ -562,6 +568,34 @@ section#latest{
                     content: "";
                     position: absolute;
                     width: 7%;
+                }
+            }
+        }
+        .category{
+            ul{
+                list-style: none;
+                display: flex;
+                justify-content: center;
+                padding: 0;
+                margin: 0;
+                li{
+                    margin-left: 3px;
+                    a{
+                        text-transform: capitalize;
+                        text-decoration: none;
+                        display: inline-block;
+                        padding: 10px 20px;
+                        color: #666;
+                        transition: 0.5s;
+                        &:hover{
+                            background-color: #f5f5f5;
+                            color: #232323;
+                        }
+                    }
+                    .active{
+                        background-color: #f5f5f5!important;
+                        color: #232323;
+                    }
                 }
             }
         }
