--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -36,6 +36,7 @@ footer{
                 }
             }
             .contact{
+                width: 49%;
                 border: solid 0.5px rgb(230, 230, 230);
                 padding: 30px 15px;
                 form{
@@ -86,7 +87,8 @@ footer{
                     }
                 }
             }
-            .subscribe{       
+            .subscribe{
+                width: 49%;       
                 border: solid 0.5px rgb(230, 230, 230);
                 padding: 30px 15px;
                 .letter-icon{
